--- a/src/app.css
+++ b/src/app.css
@@ -13,7 +13,6 @@
   left: 40px;
   bottom: 20px;
   z-index: 10;
-  transition: 0.5s;
 }
 
 .left-watermark img {
@@ -23,13 +22,29 @@
 
 .right-watermark {
   position: absolute;
-  right: 40px;
-  bottom: 20px;
+  right: 25px;
+  bottom: 5px;
   z-index: 10;
-  transition: 0.5s;
 }
 
 .right-watermark img {
-  width: 150px;
-  height: 150px;
+  width: 180px;
+  height: 180px;
+}
+
+@font-face {
+  font-family: Ringbearer;
+  src: url(../assets/RINGM___.TTF);
+}
+
+h2 {
+  font-family: Ringbearer !important;
+  font-weight: normal !important;
+  text-transform: none !important;
+  text-shadow: #FC0 1px 0 10px !important;
+}
+
+.reveal img {
+  max-width: 100% !important;
+  max-height: 100% !important;
 }
